<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casa</string>
    <string name="hello_world">Hello world!</string>

    <!--  -->
    <string name="default_value">0</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <!--  -->
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="price">Price</string>
    <string name="stories">Stories</string>
    <!-- menu -->
    <string name="action_export">Export to Glass</string>
    <string name="action_load">Load</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="menu_share">Share</string>

    <!-- map -->
    <string name="maps_api_key">AIzaSyAM4_yvghm3dmTeStjPcI_oKupUEJiK14M</string>
    <string name="discard">Discard</string>
    <string name="drag">Drag</string>
    <string name="locate_me">Locate Me</string>
    <string name="move_pin">Move Pin</string>
    <string name="no_maps">Google Maps V2 not available!</string>
    <string name="use">Use</string>
    <!-- barcode -->
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>

</resources>