<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/slider_shade"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_navigation_cancel"
                android:gravity="center"
                android:text="@string/discard"
                android:textColor="@color/list_item"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/move_pin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/list_item"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_navigation_accept"
                android:gravity="center"
                android:text="@string/use"
                android:textColor="@color/list_item"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>